# django-web-analytics

./: .pypirc  LICENSE  MANIFEST.in  README.md  make_migrations.py  requirements.txt  setup.cfg
django_web_analytics/: apps.py  forms.py  models.py  signals.py
django_web_analytics/admin/: __init__.py
django_web_analytics/middleware/: tracking.py
django_web_analytics/migrations/: 0001_initial.py  0002_prepopulate_tables.py
django_web_analytics/static/js/scripts/: tsconfig.json
django_web_analytics/static/js/scripts/src/: worker.ts
django_web_analytics/templates/includes/: analytics-service-worker.html
django_web_analytics/templates/scripts/: analytics.js  analytics.js.map  worker.js  worker.js.map
django_web_analytics/urls/: __init__.py
django_web_analytics/views/: __init__.py  api.py
