# setup.cfg
[metadata]
name = django-web-analytics
version = 0.1
description = An app for in-house web analytics
long_description = file:README.md
url = https://github.com/dpfens/django-web-analytics
license = Apache2
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache2 License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    django_web_analytics
    django_web_analytics.admin
    django_web_analytics.middleware
    django_web_analytics.migrations
    django_web_analytics.static
    django_web_analytics.templates
    django_web_analytics.urls
    django_web_analytics.views
include_package_data = True
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=1.1
